--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,7 +52,6 @@ jobs:
     needs: [packer, hcloud]
     env:
       TF_CLOUD_ORGANIZATION: ${{ github.repository_owner }}
-      TF_WORKSPACE: ${{ env.PROJECT_NAME }}
       TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
     steps:
       - name: Checkout repository
@@ -62,19 +61,20 @@ jobs:
         uses: hashicorp/tfc-workflows-github/actions/upload-configuration@v1.2.0
         id: apply-upload
         with:
-          workspace: ${{ env.TF_WORKSPACE }}
+          workspace: ${{ env.PROJECT_NAME }}
           directory: 'infrastructure'
 
       - name: Create Terraform run
         uses: hashicorp/tfc-workflows-github/actions/create-run@v1.2.0
         id: apply-run
         with:
-          workspace: ${{ env.TF_WORKSPACE }}
+          workspace: ${{ env.PROJECT_NAME }}
           configuration_version: ${{ steps.apply-upload.outputs.configuration_version_id }}
 
       - name: Apply Terraform changes
         uses: hashicorp/tfc-workflows-github/actions/apply-run@v1.2.0
         if: fromJSON(steps.apply-run.outputs.payload).data.attributes.actions.IsConfirmable
         with:
+          workspace: ${{ env.PROJECT_NAME }}
           run: ${{ steps.apply-run.outputs.run_id }}
           comment: "Applying changes from GitHub Actions, commit ${{ github.sha }}"
