--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,27 +29,16 @@ jobs:
         uses: hashicorp/setup-packer@v3
 
       - name: Build snapshot
-        if: ${{ steps.changed-files.outputs.any_changed == 'true' }}
+#       if: ${{ steps.changed-files.outputs.any_changed == 'true' }}
         run: |
           cd infrastructure
           packer init "$PACKER_FILE"
           packer build "$PACKER_FILE"
 
-  hcloud:
-    name: Create Hetzner Cloud context
-    runs-on: ubuntu-latest
-    steps:
-      - name: Setup hcloud CLI
-        uses: hetznercloud/setup-hcloud@v1
-
-      - name: Create Hetzner Cloud context
-        run: |
-          hcloud context use "$PROJECT_NAME" || hcloud context create "$PROJECT_NAME"
-
   terraform:
     name: Deploy infrastructure with Terraform
     runs-on: ubuntu-latest
-    needs: [packer, hcloud]
+    needs: [packer]
     env:
       TF_CLOUD_ORGANIZATION: ${{ github.repository_owner }}
       TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
