Only build when changed & recreate

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,10 +29,10 @@ jobs:
         uses: hashicorp/setup-packer@v3
 
       - name: Build snapshot
-#       if: ${{ steps.changed-files.outputs.any_changed == 'true' }}
+        if: ${{ steps.changed-files.outputs.any_changed == 'true' }}
         run: |
           packer init "$PACKER_FILE"
-          packer build "$PACKER_FILE"
+          packer build --force "$PACKER_FILE"
 
   terraform:
     name: Deploy infrastructure with Terraform
