--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,8 +2,7 @@ name: Deploy platform
 
 on:
   push:
-    branches:
-      - master
+    branches: [master]
 
 env:
   PROJECT_NAME: 'platform'
@@ -64,4 +63,4 @@ jobs:
         if: fromJSON(steps.apply-run.outputs.payload).data.attributes.actions.IsConfirmable
         with:
           run: ${{ steps.apply-run.outputs.run_id }}
-          comment: "Applying changes from GitHub Actions, commit ${{ github.sha }}"
+          comment: 'Applying changes from GitHub Actions, commit ${{ github.sha }}'
