--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,17 +18,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Get changed files
-        id: changed-files
-        uses: tj-actions/changed-files@v45
-        with:
-          files: ${{ env.PACKER_FILE }}
-
       - name: Setup Packer
         uses: hashicorp/setup-packer@v3
 
       - name: Build snapshot
-        if: ${{ steps.changed-files.outputs.any_changed == 'true' }}
+        if: false() # TODO: fix
         run: |
           packer init "$PACKER_FILE"
           packer build --force "$PACKER_FILE"
