--- a/manifests/applications/five31/backend-service.yml
+++ b/manifests/applications/five31/backend-service.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: five31-backend
+  name: backend
   namespace: five31
 spec:
   ports:
@@ -9,5 +9,5 @@ spec:
     protocol: TCP
     targetPort: 8080
   selector:
-    app: five31-backend
+    app: backend
   type: ClusterIP
