--- a/manifests/applications/five31/frontend-service.yml
+++ b/manifests/applications/five31/frontend-service.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: five31-frontend
+  name: frontend
   namespace: five31
 spec:
   ports:
@@ -9,5 +9,5 @@ spec:
     protocol: TCP
     targetPort: 3000
   selector:
-    app: five31-frontend
+    app: frontend
   type: ClusterIP
