Fix keel values

--- a/manifests/cluster-addons/keel/values.yaml
+++ b/manifests/cluster-addons/keel/values.yaml
@@ -1,4 +1,5 @@
-helmProvider:
-  enabled: false
-secret:
-  enabled: false
+keel:
+  helmProvider:
+    enabled: false
+  secret:
+    enabled: false
