--- a/manifests/cluster-addons/argocd/templates/appproject.yml
+++ b/manifests/cluster-addons/argocd/templates/appproject.yml
@@ -4,6 +4,8 @@ metadata:
   name: default
   namespace: argocd
 spec:
+  orphanedResources:
+    warn: false
   clusterResourceWhitelist:
   - group: '*'
     kind: '*'
