Allow cross namespace traefik

--- a/manifests/cluster-addons/traefik/values.yaml
+++ b/manifests/cluster-addons/traefik/values.yaml
@@ -9,6 +9,9 @@ traefik:
           to: websecure
           scheme: https
           permanent: true
+  providers:
+    kubernetesCRD:
+      allowCrossNamespace: true
   additionalArguments:
     - "--providers.kubernetesingress.ingressendpoint.publishedservice=traefik/traefik"
   resources:
