Update values, add ingress

--- a/manifests/cluster-addons/oauth2-proxy/values.yaml
+++ b/manifests/cluster-addons/oauth2-proxy/values.yaml
@@ -12,3 +12,8 @@ oauth2-proxy:
     redirect-url: https://sso.bakseter.net/oauth2/callback
     cookie-domain: .bakseter.net
     whitelist-domain: .bakseter.net
+  ingress:
+    enabled: true
+    className: traefik
+    hosts:
+      - sso.bakseter.net
