Add cert-manager, switch to clusterissuer & fix oauth2-proxy

--- a/manifests/cluster-addons/oauth2-proxy/values.yaml
+++ b/manifests/cluster-addons/oauth2-proxy/values.yaml
@@ -15,5 +15,7 @@ oauth2-proxy:
   ingress:
     enabled: true
     className: traefik
+    annotations:
+      cert-manager.io/cluster-issuer: letsencrypt
     hosts:
       - sso.bakseter.net
