--- a/manifests/applications/five31/ingress.yml
+++ b/manifests/applications/five31/ingress.yml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   annotations:
-    cert-manager.io/issuer: letsencrypt
+    cert-manager.io/cluster-issuer: letsencrypt
   name: five31
   namespace: five31
 spec:
