--- a/manifests/applications/spenn/ingress.yml
+++ b/manifests/applications/spenn/ingress.yml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   annotations:
-    cert-manager.io/issuer: letsencrypt
+    cert-manager.io/cluster-issuer: letsencrypt
     traefik.ingress.kubernetes.io/router.middlewares: "oauth2-proxy-forwardauth@kubernetescrd"
   name: spenn
   namespace: spenn
