--- a/manifests/cluster-addons/cert-manager/templates/clusterissuer.yml
+++ b/manifests/cluster-addons/cert-manager/templates/clusterissuer.yml
@@ -1,8 +1,7 @@
 apiVersion: cert-manager.io/v1
-kind: Issuer
+kind: ClusterIssuer
 metadata:
   name: letsencrypt
-  namespace: spenn
 spec:
   acme:
     email: andreas_tkd@hotmail.com
