--- a/manifests/cluster-addons/oauth2-proxy/values.yaml
+++ b/manifests/cluster-addons/oauth2-proxy/values.yaml
@@ -17,6 +17,8 @@ oauth2-proxy:
     className: traefik
     annotations:
       cert-manager.io/cluster-issuer: letsencrypt
+    hosts:
+      - sso.bakseter.net
     tls:
     - hosts:
         - sso.bakseter.net
