--- a/manifests/applications/spenn/ingress.yml
+++ b/manifests/applications/spenn/ingress.yml
@@ -3,7 +3,7 @@ kind: Ingress
 metadata:
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt
-#   traefik.ingress.kubernetes.io/router.middlewares: "oauth2-proxy-forwardauth@kubernetescrd"
+    traefik.ingress.kubernetes.io/router.middlewares: "oauth2-proxy-forwardauth@kubernetescrd"
   name: spenn
   namespace: spenn
 spec:
