--- a/manifests/cluster-addons/oauth2-proxy/values.yaml
+++ b/manifests/cluster-addons/oauth2-proxy/values.yaml
@@ -10,8 +10,10 @@ oauth2-proxy:
     pass-authorization-header: true
     code-challenge-method: S256
     redirect-url: https://sso.bakseter.net/oauth2/callback
+    cookie-csrf-per-request: true
     cookie-domain: .bakseter.net
     whitelist-domain: .bakseter.net
+    silence-ping-logging: true
   ingress:
     enabled: true
     className: traefik
