--- a/manifests/cluster-addons/argocd/values.yaml
+++ b/manifests/cluster-addons/argocd/values.yaml
@@ -7,7 +7,7 @@ global:
 configs:
   repositories:
     argocd:
-      url: https://github.com/bakseter/platform
+      url: https://github.com/bakseter/whpat
 
   dex:
     enabled: false
