--- a/manifests/cluster-addons/oauth2-proxy/values.yaml
+++ b/manifests/cluster-addons/oauth2-proxy/values.yaml
@@ -14,6 +14,7 @@ oauth2-proxy:
     cookie-domain: .bakseter.net
     whitelist-domain: .bakseter.net
     silence-ping-logging: true
+    set-xauthrequest: true
   ingress:
     enabled: true
     className: traefik
