Update argocd values

--- a/manifests/cluster-addons/argocd/values.yaml
+++ b/manifests/cluster-addons/argocd/values.yaml
@@ -31,4 +31,7 @@ argo-cd:
       enabled: true
       ingressClassName: traefik
       hostname: argocd.bakseter.net
+      annotations:
+        cert-manager.io/cluster-issuer: letsencrypt
+        traefik.ingress.kubernetes.io/router.middlewares: "oauth2-proxy-forwardauth@kubernetescrd"
       tls: true
