Disable argocd ingress

--- a/manifests/cluster-addons/argocd/values.yaml
+++ b/manifests/cluster-addons/argocd/values.yaml
@@ -28,7 +28,7 @@ argo-cd:
 
   server:
     ingress:
-      enabled: true
+      enabled: false
       ingressClassName: traefik
       hostname: argocd.bakseter.net
       annotations:
