--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,8 @@ jobs:
     name: Deploy infrastructure with Terraform
     runs-on: ubuntu-latest
     needs: [packer]
+    concurrency:
+      group: 'terraform'
     env:
       TF_CLOUD_ORGANIZATION: ${{ github.repository_owner }}
       TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
