--- a/manifests/cluster-addons/argocd/values.yaml
+++ b/manifests/cluster-addons/argocd/values.yaml
@@ -8,7 +8,7 @@ argo-cd:
   configs:
     repositories:
       argocd:
-        url: https://github.com/bakseter/whpat
+        url: https://github.com/bakseter/whpah
 
     cm:
       admin.enabled: true
@@ -33,5 +33,5 @@ argo-cd:
       hostname: argocd.bakseter.net
       annotations:
         cert-manager.io/cluster-issuer: letsencrypt
-        traefik.ingress.kubernetes.io/router.middlewares: "oauth2-proxy-forwardauth@kubernetescrd"
+        traefik.ingress.kubernetes.io/router.middlewares: 'oauth2-proxy-forwardauth@kubernetescrd'
       tls: true
