--- a/manifests/cluster-addons/argocd/values.yaml
+++ b/manifests/cluster-addons/argocd/values.yaml
@@ -1,7 +1,7 @@
 argo-cd:
   global:
     domain: argocd.bakseter.net
-
+    revisionHistoryLimit: 1
     networkPolicy:
       create: false # TODO: enable
 
