--- a/manifests/cluster-addons/oauth2-proxy/templates/middleware.yml
+++ b/manifests/cluster-addons/oauth2-proxy/templates/middleware.yml
@@ -7,7 +7,5 @@ spec:
   forwardAuth:
     address: http://oauth2-proxy.oauth2-proxy.svc.cluster.local/oauth2
     trustForwardHeader: true
-    authResponseHeaders:
-      - X-Forwarded-User
-      - X-Forwarded-Email
-      - X-Forwarded-Groups
+    authResponseHeadersRegex: ^X-
+    headerField: X-My-User-Header-Test
