Set reverse-proxy: true

--- a/manifests/cluster-addons/oauth2-proxy/values.yaml
+++ b/manifests/cluster-addons/oauth2-proxy/values.yaml
@@ -15,6 +15,7 @@ oauth2-proxy:
     whitelist-domain: .bakseter.net
     silence-ping-logging: true
     skip-provider-button: true
+    reverse-proxy: true
 
   revisionHistoryLimit: 1
 
