--- a/manifests/cluster-addons/oauth2-proxy/values.yaml
+++ b/manifests/cluster-addons/oauth2-proxy/values.yaml
@@ -1,13 +1,11 @@
 oauth2-proxy:
   config:
     existingSecret: google-credentials
-    configFile: |
-      email_domains = ["*"]
-      upstreams = ["static://200"]
 
   extraArgs:
     provider: google
     oidc-issuer-url: https://accounts.google.com
+    http-address: 0.0.0.0:4180
     code-challenge-method: S256
     redirect-url: https://auth.bakseter.net/oauth2/callback
     cookie-csrf-per-request: true
@@ -16,6 +14,9 @@ oauth2-proxy:
     silence-ping-logging: true
     skip-provider-button: true
     reverse-proxy: true
+    real-client-ip-header: X-Forwarded-For
+    upstream: static://200
+    email-domain: '*'
 
   revisionHistoryLimit: 1
 
