--- a/manifests/applications/spenn/ingress.yml
+++ b/manifests/applications/spenn/ingress.yml
@@ -3,23 +3,23 @@ kind: Ingress
 metadata:
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt
-    traefik.ingress.kubernetes.io/router.middlewares: "oauth2-proxy-forwardauth@kubernetescrd"
+    traefik.ingress.kubernetes.io/router.middlewares: 'oauth2-proxy-forwardauth@kubernetescrd,oauth2-proxy-errors@kubernetescrd'
   name: spenn
   namespace: spenn
 spec:
   ingressClassName: traefik
   rules:
-  - host: spenn.bakseter.net
-    http:
-      paths:
-      - backend:
-          service:
-            name: app
-            port:
-              number: 80
-        path: /
-        pathType: Prefix
+    - host: spenn.bakseter.net
+      http:
+        paths:
+          - backend:
+              service:
+                name: app
+                port:
+                  number: 80
+            path: /
+            pathType: Prefix
   tls:
-  - hosts:
-    - spenn.bakseter.net
-    secretName: ingress-tls
+    - hosts:
+        - spenn.bakseter.net
+      secretName: ingress-tls
