--- a/manifests/cluster-addons/oauth2-proxy/templates/middleware.yml
+++ b/manifests/cluster-addons/oauth2-proxy/templates/middleware.yml
@@ -21,10 +21,8 @@ metadata:
   namespace: oauth2-proxy
 spec:
   forwardAuth:
-    address: https://auth.bakseter.net/oauth2
+    address: https://oauth2-proxy.oauth2-proxy.svc.cluster.local/oauth
     trustForwardHeader: true
-    authResponseHeadersRegex: ^X-
-    headerField: X-My-User-Header-Test
 ---
 apiVersion: traefik.io/v1alpha1
 kind: Middleware
