--- a/manifests/cluster-addons/argocd/values.yaml
+++ b/manifests/cluster-addons/argocd/values.yaml
@@ -26,8 +26,8 @@ argo-cd:
     dex:
       enabled: true
 
-    server:
-      insecure: true
+    params:
+      server.insecure: true
 
   notifications:
     enabled: false
