nvm pass user headers

--- a/manifests/cluster-addons/oauth2-proxy/values.yaml
+++ b/manifests/cluster-addons/oauth2-proxy/values.yaml
@@ -18,7 +18,7 @@ oauth2-proxy:
     upstream: static://200
     email-domain: '*'
     set-xauthrequest: true
-    pass-basic-auth: true
+    pass-user-headers: true
 
   revisionHistoryLimit: 1
 
