--- a/manifests/cluster-addons/oauth2-proxy/templates/middleware.yml
+++ b/manifests/cluster-addons/oauth2-proxy/templates/middleware.yml
@@ -21,7 +21,7 @@ metadata:
   namespace: oauth2-proxy
 spec:
   forwardAuth:
-    address: https://oauth2-proxy.oauth2-proxy.svc.cluster.local/oauth
+    address: https://oauth2-proxy.oauth2-proxy.svc.cluster.local/oauth2
     trustForwardHeader: true
 ---
 apiVersion: traefik.io/v1alpha1
