--- a/manifests/cluster-addons/oauth2-proxy/templates/middleware.yml
+++ b/manifests/cluster-addons/oauth2-proxy/templates/middleware.yml
@@ -23,6 +23,11 @@ spec:
   forwardAuth:
     address: http://oauth2-proxy.oauth2-proxy.svc.cluster.local/oauth2
     trustForwardHeader: true
+    authResponseHeaders:
+      - X-Auth-Request-User
+      - X-Auth-Request-Email
+      - X-Auth-Request-Groups
+      - X-Auth-Request-Preferred-Username
 ---
 apiVersion: traefik.io/v1alpha1
 kind: Middleware
