--- a/manifests/cluster-addons/argocd/values.yaml
+++ b/manifests/cluster-addons/argocd/values.yaml
@@ -26,7 +26,7 @@ argo-cd:
     rbac:
       policy.default: ''
       policy.csv: |
-        p, role:admin, applications, *, allow
+        p, role:admin, applications, action/*, *, allow
         g, andreas_tkd@hotmail.com, role:admin
 
     dex:
