--- a/manifests/cluster-addons/argocd/values.yaml
+++ b/manifests/cluster-addons/argocd/values.yaml
@@ -26,7 +26,9 @@ argo-cd:
     rbac:
       policy.default: ''
       policy.csv: |
-        p, role:admin, applications, action/*, *, allow
+        p, role:admin, *, get, *, allow
+        p, role:admin, applications, sync, *, allow
+        p, role:admin, applicationsets, sync, *, allow
         g, andreas_tkd@hotmail.com, role:admin
 
     dex:
