--- a/manifests/cluster-addons/argocd/values.yaml
+++ b/manifests/cluster-addons/argocd/values.yaml
@@ -18,7 +18,7 @@ argo-cd:
             id: oauth2-proxy
             name: OAuth2-Proxy
             config:
-              userHeader: X-Auth-Request-Email
+              userHeader: X-Auth-Request-User
               groupHeader: X-Auth-Request-Groups
               staticGroups:
                 - default
