--- a/manifests/cluster-addons/argocd/values.yaml
+++ b/manifests/cluster-addons/argocd/values.yaml
@@ -25,6 +25,7 @@ argo-cd:
 
     rbac:
       policy.default: ''
+      scopes: '[groups, email]'
       policy.csv: |
         p, role:org-admin, *, get, *, allow
         p, role:org-admin, applications, sync, *, allow
