--- a/manifests/applications/spenn/database-statefulset.yml
+++ b/manifests/applications/spenn/database-statefulset.yml
@@ -29,4 +29,4 @@ spec:
       volumes:
         - name: postgres-data
           persistentVolumeClaim:
-            claimName: database
+            claimName: imported-data
