--- a/manifests/applications/spenn/database-persistentvolumeclaim.yml
+++ b/manifests/applications/spenn/database-persistentvolumeclaim.yml
@@ -1,12 +1,13 @@
-apiVersion: v1
 kind: PersistentVolumeClaim
+apiVersion: v1
 metadata:
-  name: database
+  name: imported-data
   namespace: spenn
 spec:
+  storageClassName: hcloud-volumes
+  volumeName: imported-data # <-- reference PV name
   accessModes:
-  - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
-      storage: 1Gi
-  storageClassName: hcloud-volumes
+      storage: 10Gi
