--- a/manifests/applications/spenn/database-persistentvolumeclaim.yml
+++ b/manifests/applications/spenn/database-persistentvolumeclaim.yml
@@ -7,7 +7,7 @@ spec:
   storageClassName: hcloud-volumes
   volumeName: spenn-database # <-- reference PV name
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   resources:
     requests:
       storage: 10Gi
