--- a/manifests/applications/bakseter-net/networkpolicy.yml
+++ b/manifests/applications/bakseter-net/networkpolicy.yml
@@ -9,5 +9,7 @@ spec:
   policyTypes:
     - Ingress
     - Egress
-  ingress: []
-  egress: []
+  ingress:
+    - ports:
+        - protocol: TCP
+          port: 80
