--- a/manifests/applications/five31/database-persistentvolumeclaim.yml
+++ b/manifests/applications/five31/database-persistentvolumeclaim.yml
@@ -1,12 +1,13 @@
-#apiVersion: v1
-#kind: PersistentVolumeClaim
-#metadata:
-#name: database
-#namespace: five31
-#spec:
-#accessModes:
-#- ReadWriteOnce
-#resources:
-#requests:
-#storage: 1Gi
-#storageClassName: hcloud-volumes
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: database
+  namespace: five31
+spec:
+  storageClassName: hcloud-volumes
+  volumeName: five31-database # <-- reference PV name
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 10Gi
